# 25MNRV_A-Star-Micromouse_CS152

./: .gitignore  README.md  constants.py  draft.ipynb  game_state.py  main.py  maze.py  pathfinding.py  pseudocode.md  pyproject.toml  run.py
.github/workflows/: release.yml
archive/iterations/: 1_algo.py  2_maze-wall_random-movement.py  3_.py  4_ui.py  5_functional-UI.py  6_logs-outside.py
entities/: mouse.py
simulation/: game_state.py  main.py  manager.py
ui/: button.py  drawing.py  slider.py
