[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromouse-simulation"
version = "0.1.0"
description = "A Micromouse maze-solving simulation using A* pathfinding"
authors = [{name = "Carl Kho"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pygame>=2.6.1"]

[project.scripts]
micromouse = "micromouse.main:main"

[tool.setuptools]
packages = ["micromouse"]
